# LongTracer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
docs/: api-reference.md
docs/getting-started/: quickstart.md
examples/: .env.example  README.md  demo_pipeline.py
examples/rag/: __init__.py  chunker.py  embedder.py  pdf_parser.py  retriever.py  store.py
longtracer/: __init__.py  cli.py  config.py  core.py  logging_config.py  server.py  webhooks.py
longtracer/adapters/: __init__.py  autogen_handler.py  crewai_handler.py  langchain_handler.py  llamaindex_handler.py  openai_handler.py
longtracer/guard/: __init__.py  claim_splitter.py  context_relevance.py  nli_model.py  parallel_pipeline.py  slm_verifier.py  trace_report.py  tracer.py  verifier.py
longtracer/guard/cache/: __init__.py  backend.py  factory.py  kv_backend.py  kv_factory.py  kv_mongo.py  kv_sqlite.py  memory.py  mongo.py  postgres.py  redis_backend.py  sqlite.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api-reference/: index.html
site/backends/: index.html
site/changelog/: index.html
site/cli/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/how-it-works/: index.html
site/integrations/direct-api/: index.html
site/integrations/haystack/: index.html
site/integrations/langchain/: index.html
site/integrations/langgraph/: index.html
site/integrations/llamaindex/: index.html
tests/: 01_longtrace.py  02_longtracer.py  03_longtracellama.py  04_directapi.py  05_multiprotrace.py  verify_all_adapters.py  verify_answers.py
