[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longtracer"
version = "0.1.6"
version = "0.1.5"
description = "RAG verification guardrails — detect hallucinations in LLM responses using hybrid STS + NLI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ENDEVSOLS"},
]
keywords = ["rag", "llm", "verification", "hallucination", "nli", "citation", "tracing", "guardrails", "langchain", "llamaindex", "observability", "grounding", "ai-safety", "claim-verification", "sentence-transformers", "deberta"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "sentence-transformers>=5.0",
    "transformers>=4.50",
    "numpy>=2.0",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
longtracer = "longtracer.cli:main"

[project.urls]
Repository = "https://github.com/ENDEVSOLS/LongTracer"
Documentation = "https://endevsols.github.io/LongTracer"
Changelog = "https://github.com/ENDEVSOLS/LongTracer/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/ENDEVSOLS/LongTracer/issues"

[project.optional-dependencies]
langchain = [
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-community>=0.4",
]
llamaindex = [
    "llama-index-core>=0.10",
]
haystack = [
    "haystack-ai>=2.0",
]
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
mongo = [
    "pymongo>=4.6",
]
chroma = [
    "chromadb>=1.0",
    "langchain-chroma>=1.0",
    "langchain-huggingface>=1.0",
]
postgres = [
    "psycopg2-binary>=2.9",
]
redis = [
    "redis>=4.0",
]
slm = [
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]
openai = [
    "openai>=1.0",
]
crewai = [
    "crewai>=0.80",
]
autogen = [
    "autogen-agentchat>=0.4",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
all = [
    "longtracer[langchain,llamaindex,haystack,langgraph,mongo,chroma,postgres,redis,slm,openai,crewai,autogen,server]",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["longtracer"]

[tool.hatch.build.targets.sdist]
include = [
    "longtracer/**",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# ── Dev tooling ─────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E402", "F401", "F541"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
